--- a/src/Components/Contact Us/contact.css
+++ b/src/Components/Contact Us/contact.css
@@ -1,11 +1,11 @@
 .wrap {
-    width: 100%;
-    padding: 2rem;
+    /* width: 100%; */
+    padding-top: 2rem;
     background-color: #0e0111;
     color: white;
-
-	height: 900px;
-  width: 100%;
+margin-bottom: 12rem;
+	height: 930px;
+  width: 100% !important;
   position: relative;
 	background-image: url('https://media.istockphoto.com/photos/colorful-background-picture-id1280385511?b=1&k=20&m=1280385511&s=170667a&w=0&h=4-KMkIqgyw2gTBMTBbYZVZoidwRsWZzr3q0xyUDYhas=');
 
@@ -16,7 +16,7 @@
    
   }
   .wrap::before{
-    height: 900px;
+    height: 930px;
     width: 100%;
     position: absolute;
     content: "";
@@ -62,24 +62,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem 1.5rem;
+    padding: 1.5rem 1.5rem;
     border-radius: 12px;
 
-    background: #00ffd1;
-    opacity: 0.5;
+    background: #77002e;
+    /* opacity: 0.5; */
     cursor: pointer;
     transition: background 0.15s;
+    color: white;
   }
-  i {
+  /* i {
     margin-right: 0.5rem;
-  }
+  } */
   .submit:hover {
-    background: #00ffd1;
+    background: #f872a6
   }
   .form-group input[type="text"]:focus,
   .form-group input[type="email"]:focus,
   .form-group textarea:focus {
-    border: 1px solid #222;
+    border: 2px solid rgb(241, 239, 239);
   }
   
   /* @media screen and (min-width: 576px) {
@@ -104,16 +105,21 @@
   } */
   .form{
     /* position: absolute; */
-    z-index: 10;
+    /* z-index: 10; */
     /* left: 10rem;
     right: 5rem !important; */
     background-color: #0e0111;
     padding: 5%;
-    opacity: 0.9;
+    /* opacity: 0.9; */
     margin: auto;
-    width: 70% !important;
   }
-  form{
+  .form{
+    margin: auto;
+    width: 70%;
+    height: auto;
+
+  }
+  .form{
    
    
     /* margin: auto; */
