--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,33 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-.footer-body {
-  display: flex;
-  background: #333;
-  justify-content: flex-end;
-  align-items: flex-end;
-  margin-top: 3rem;
-  z-index: 9;
-  /* min-height: 50vh; */
-}
-
-.footer {
-  position: relative;
-  width: 100%;
-  background: #3586ff;
-  min-height: 100px;
-  padding: 20px 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
 
 .social-icon,
 .menu {
@@ -35,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 0;
+  margin: 10px auto;
   flex-wrap: wrap;
 }
 
@@ -70,50 +40,23 @@
   opacity: 1;
 }
 
-.footer p {
-  color: #fff;
-  margin: 15px 0 10px 0;
-  font-size: 1rem;
-  font-weight: 300;
-}
-
-.wave {
-  position: absolute;
-  top: -100px;
-  left: 0;
+.bg-display{
+  background-image: url('./bg.svg');
   width: 100%;
-  height: 100px;
-  background: url("https://i.ibb.co/wQZVxxk/wave.png");
-  background-size: 1000px 100px;
+  background-repeat: no-repeat;
+  /* background-position: center; */
+  object-fit: contain;
+  background-size: cover;
+ 
+ 
 }
 
-.wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
+footer{
+  position: fixed;
   bottom: 0;
-  animation: animateWaves 4s linear infinite;
 }
 
-.wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animate 4s linear infinite !important;
-}
-
-.wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWaves 3s linear infinite;
-}
-
-.wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animate 3s linear infinite;
-}
+/* 
 
 @keyframes animateWaves {
   0% {
@@ -131,4 +74,4 @@
   100% {
     background-positon-x: 0px;
   }
-}
+} */
