--- a/src/Components/Meetups/src/pages/NewMeetupForm.module.css
+++ b/src/Components/Meetups/src/pages/NewMeetupForm.module.css
@@ -24,8 +24,10 @@
   
   .actions {
     margin-top: 1rem;
-    text-align: right;
+
+    text-align: center;
   }
+
   
   .actions button {
     font: inherit;
