--- a/src/Components/Motivations/card.scss
+++ b/src/Components/Motivations/card.scss
@@ -26,7 +26,7 @@ $text-color: #191919;
 		margin-left: 30px;
 		margin-top: 2rem;
 	
-		background: linear-gradient(-180deg,    #3f72f3bb 50%,  #ffb6b6cc 100%);		
+		background: linear-gradient(-180deg,    #dde4f8bb 50%,  #b60347 100%);		
 		border-radius: 12px;
 		overflow: hidden;
 		box-shadow: 0 4px 8px #0005,
